NetBSD Problem Report #18067

Received: (qmail 28124 invoked by uid 605); 25 Aug 2002 21:42:59 -0000
Message-Id: <20020825214258.920FA7DC6@yeah-baby.shagadelic.org>
Date: Sun, 25 Aug 2002 14:42:58 -0700 (PDT)
From: thorpej@shagadelic.org
Sender: gnats-bugs-owner@netbsd.org
Reply-To: thorpej@shagadelic.org
To: gnats-bugs@gnats.netbsd.org
Subject: rlim_t not unsigned
X-Send-Pr-Version: 3.95

>Number:         18067
>Category:       standards
>Synopsis:       rlim_t not unsigned
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    standards-manager
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Aug 25 21:43:00 +0000 2002
>Closed-Date:    Sun Apr 10 08:08:46 +0000 2011
>Last-Modified:  Sun Apr 10 08:10:03 +0000 2011
>Originator:     Jason R Thorpe
>Release:        NetBSD 1.6D
>Organization:
Wasabi Systems, Inc.
>Environment:


System: NetBSD yeah-baby.shagadelic.org 1.6D NetBSD 1.6D (YEAH-BABY-XP) #10: Wed Jul 10 11:36:52 PDT 2002 thorpej@yeah-baby.shagadelic.org:/u1/netbsd/src/sys/arch/i386/compile/YEAH-BABY-XP i386
Architecture: i386
Machine: i386
>Description:
	IEEE Std 1003.1-2001 specifies that rlim_t is an unsigned
	integer type used for limit values.

	rlim_t is currently typedef'd to quad_t in NetBSD.

>How-To-Repeat:
	Code inspection.

>Fix:
	Not provided.
>Release-Note:
>Audit-Trail:
From: Christos Zoulas <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/18067 CVS commit: [christos-time_t] src/sys/sys
Date: Thu,  3 Apr 2008 13:03:06 +0000 (UTC)

 Module Name:	src
 Committed By:	christos
 Date:		Thu Apr  3 13:03:06 UTC 2008

 Modified Files:
 	src/sys/sys [christos-time_t]: types.h

 Log Message:
 PR/18067: Jason Thorpe: rlim_t needs to be unsigned.


 To generate a diff of this commit:
 cvs rdiff -r1.80.2.1 -r1.80.2.2 src/sys/sys/types.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: jruoho@NetBSD.org
State-Changed-When: Sun, 10 Apr 2011 08:08:46 +0000
State-Changed-Why:

This was fixed a long time ago.



From: "Jukka Ruohonen" <jruoho@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/18067 CVS commit: src
Date: Sun, 10 Apr 2011 08:07:42 +0000

 Module Name:	src
 Committed By:	jruoho
 Date:		Sun Apr 10 08:07:42 UTC 2011

 Modified Files:
 	src/distrib/sets/lists/tests: mi
 	src/tests/include: Makefile
 Added Files:
 	src/tests/include: t_types.c

 Log Message:
 Add tests for PR standards/44847 and PR standards/18067.


 To generate a diff of this commit:
 cvs rdiff -u -r1.303 -r1.304 src/distrib/sets/lists/tests/mi
 cvs rdiff -u -r1.2 -r1.3 src/tests/include/Makefile
 cvs rdiff -u -r0 -r1.1 src/tests/include/t_types.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.