PR/18067: Jason Thorpe: rlim_t needs to be unsigned.